[package]
name = "dcap-test"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-codec = { version = "3.6.5", package = "parity-scale-codec", features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.188", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.107", default-features = false, features = ["alloc", "preserve_order"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }

log = { version = "0.4.20", default-features = false }
anyhow = "1.0"
pem = "3.0.2"
x509-parser = "0.15.1"
serde_asn1_der = { version = "0.8.0", features = ["any"] }
asn1_der = "0.7.6"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
urlencoding = "2.1.3"
const-oid = "0.9.5"

[features]
TD_ENV = []
